--- a/docker/golang/Dockerfile
+++ b/docker/golang/Dockerfile
@@ -1,8 +1,8 @@
-FROM golang:1.15.2-buster
+FROM golang:1.17.5-bullseye
 
 WORKDIR /go/src/app
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
-RUN go get github.com/githubnemo/CompileDaemon
+RUN go install github.com/githubnemo/CompileDaemon@latest
 
-CMD [ "/entrypoint.sh" ]
+ENTRYPOINT [ "/entrypoint.sh" ]
